<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:id="@+id/scrolview"
    android:layout_height="match_parent"
    tools:context=".Tutor_details_activity">
    <LinearLayout
        android:paddingBottom="7dp"
        android:orientation="vertical"
        android:background="@color/graylight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="405dp"
            tools:ignore="UselessParent">
            <RelativeLayout
                android:orientation="vertical"
                android:background="@color/colorPrimary"
                android:layout_width="match_parent"
                android:layout_height="350dp">
                <ImageButton
                    android:onClick="go_tutor_detail_activity"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:id="@+id/back_button"
                    android:background="@drawable/ic_arrow_back_white_24dp"
                    android:layout_width="40dp"
                    android:layout_height="35dp"
                    android:layout_marginStart="10dp" />

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/tutor_profile_image"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_alignTop="@+id/back_button"
                    android:layout_centerHorizontal="true"
                    android:src="@drawable/nav_home_png" />

                <TextView
                    android:layout_marginTop="10dp"
                    android:layout_below="@+id/tutor_profile_image"
                    android:id="@+id/tutor_profile_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginBottom="151dp"
                    android:text="@string/taizul_islam"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <com.like.LikeButton
                    app:anim_scale_factor="2.5"
                    app:circle_end_color="@color/colorPrimary"
                    app:circle_start_color="@color/white"
                    android:id="@+id/star_button"
                    android:layout_width="55dp"
                    android:layout_height="55dp"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginBottom="66dp"
                    app:icon_size="40dp"
                    app:icon_type="heart" />

                <ProgressBar

                    android:id="@+id/progressBar2333333"
                    style="?android:attr/progressBarStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="62dp" />


            </RelativeLayout>

            <android.support.v7.widget.CardView
                app:cardElevation="2dp"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_alignParentBottom="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_marginEnd="25dp"
                android:layout_marginStart="25dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:weightSum="4"
                    android:baselineAligned="false">
                    <LinearLayout
                        android:gravity="center"
                        android:orientation="vertical"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="match_parent">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/likes"
                            android:textSize="20sp"
                            />
                        <TextView
                            android:id="@+id/likes_counter"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/_0"
                            android:textStyle="bold"
                            android:textSize="20sp"
                            android:paddingTop="10dp"
                            android:textColor="@color/colorPrimary"/>

                    </LinearLayout>
                    <LinearLayout
                        android:gravity="center"
                        android:orientation="vertical"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="match_parent">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/followers"
                            android:textSize="20sp"
                            />
                        <TextView
                            android:id="@+id/folloers_list"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/_0"
                            android:textStyle="bold"
                            android:textSize="20sp"
                            android:paddingTop="10dp"
                            android:textColor="@color/colorPrimary"/>

                    </LinearLayout>
                    <LinearLayout
                        android:gravity="center"
                        android:orientation="vertical"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="match_parent">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/engaged"
                            android:textSize="20sp"
                            />
                        <TextView
                            android:id="@+id/textView_engage"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/_0"
                            android:textStyle="bold"
                            android:textSize="20sp"
                            android:paddingTop="10dp"
                            android:textColor="@color/colorPrimary"/>

                    </LinearLayout>

                    <LinearLayout
                        android:gravity="center"
                        android:orientation="vertical"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="match_parent">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Rating"
                            android:textSize="20sp"
                            />
                        <TextView
                            android:id="@+id/ratNumId"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/_0"
                            android:textStyle="bold"
                            android:textSize="20sp"
                            android:paddingTop="10dp"
                            android:textColor="@color/colorPrimary"/>

                    </LinearLayout>
                </LinearLayout>

            </android.support.v7.widget.CardView>
        </RelativeLayout>
        <android.support.v7.widget.CardView
            android:layout_marginTop="20dp"
            android:layout_marginEnd="25dp"
            android:layout_marginStart="25dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <RelativeLayout
                android:id="@+id/layout_expand"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:paddingLeft="10dp"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/item_description_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:clickable="true"
                    android:padding="10dp"
                    android:text="Tutor Biography"
                    android:fontFamily="sans-serif-medium"
                    android:textStyle="normal"
                    android:paddingBottom="15dp"
                    android:textSize="20sp"
                    tools:targetApi="jelly_bean" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentTop="true"
                    android:paddingRight="10dp"
                    android:paddingTop="4dp"
                    app:srcCompat="@drawable/ic_arrow_drop_down_black_24dp"
                    android:layout_alignParentRight="true" />
                <me.biubiubiu.justifytext.library.JustifyTextView
                    android:textColor="@color/colorPrimary"
                    android:id="@+id/item_description"
                    android:layout_below="@+id/item_description_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:padding="10dp"
                    android:fontFamily="sans-serif-medium"
                    android:paddingBottom="15dp"
                    android:visibility="gone"
                    android:textSize="17dp"
                    />

            </RelativeLayout>
        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            android:layout_marginTop="20dp"
            android:layout_marginEnd="25dp"
            android:layout_marginStart="25dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <RelativeLayout
                android:id="@+id/layout_expand1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:paddingLeft="10dp"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/item_description_title1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:clickable="true"
                    android:padding="10dp"
                    android:text="Engaged Students "
                    android:fontFamily="sans-serif-medium"
                    android:textStyle="normal"
                    android:paddingBottom="15dp"
                    android:textSize="20sp"
                    tools:targetApi="jelly_bean" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentTop="true"
                    android:paddingRight="10dp"
                    android:paddingTop="4dp"
                    app:srcCompat="@drawable/ic_arrow_drop_down_black_24dp"
                    android:layout_alignParentRight="true" />
                <android.support.v7.widget.RecyclerView
                    android:id="@+id/item_description1_recycler"
                    android:layout_below="@+id/item_description_title1"
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    android:paddingBottom="15dp"
                    android:visibility="gone"
                    android:textSize="17dp" />

            </RelativeLayout>
        </android.support.v7.widget.CardView>
        <LinearLayout
            android:layout_width="360dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:layout_marginTop="45dp">
            <LinearLayout
                android:weightSum="3"
                android:orientation="horizontal"
                android:paddingLeft="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:layout_weight="0.50"
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    app:srcCompat="@drawable/ic_email_black_24dp"/>
                <TextView
                    android:layout_weight="2"
                    android:id="@+id/tutor_email"
                    android:textStyle="bold"
                    android:layout_gravity="center_vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="15dp"
                    android:text="bdtutor@example.com"/>
                <ImageView
                    android:onClick="send_email"
                    android:paddingRight="10dp"
                    android:layout_weight="0.50"
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    app:srcCompat="@drawable/ic_send_black_24dp"/>

            </LinearLayout>
            <LinearLayout
                android:weightSum="3"
                android:layout_marginTop="25dp"
                android:orientation="horizontal"
                android:paddingLeft="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:layout_weight="0.5"
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    app:srcCompat="@drawable/ic_phone_android_black_24dp"/>
                <TextView
                    android:layout_weight="2"
                    android:textStyle="bold"
                    android:id="@+id/tutor_contact_no"
                    android:layout_gravity="center_vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dp"
                    android:text="+8801xxxxxxxxx"/>
                <ImageView
                    android:onClick="phone_call_dialer"
                    android:layout_weight="0.5"
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    app:srcCompat="@drawable/ic_call_black_24dp"/>
            </LinearLayout>
            <LinearLayout
                android:weightSum="3"
                android:layout_marginTop="25dp"
                android:orientation="horizontal"
                android:paddingLeft="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:layout_weight="0.5"
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    app:srcCompat="@drawable/ic_forum_black_24dp"/>
                <TextView
                    android:layout_weight="2"
                    android:textStyle="bold"
                    android:layout_gravity="center_vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="15dp"
                    android:text="Show all comments"/>
                <ImageView
                    android:onClick="coment_tutor"
                    android:layout_weight="0.5"
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    app:srcCompat="@drawable/ic_comment_black_24dp"/>

            </LinearLayout>


        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <RatingBar
                android:id="@+id/simpleRatingBar"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="30dp"
                android:progressTint="#00B0FF"
                />
            <Button
                android:id="@+id/ratingButton"
                android:layout_marginTop="30dp"
                android:layout_marginLeft="10dp"
                android:text="Submit rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <TextView
            android:layout_gravity="center_horizontal"
            android:textStyle="bold"
            android:text="Hey do you want to engaged with me?"
            android:layout_marginTop="25dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
        <Button
            android:id="@+id/btn_engage"
            android:layout_gravity="center_horizontal"
            android:layout_width="167dp"
            android:layout_height="45dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/tttttt"
            android:hint="Engage"
            android:textColorHint="@color/white"

            android:textSize="17sp" />






    </LinearLayout>

</ScrollView>